demo-http-apps/demo-gw-http-route-1_based-on-np.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: my-http-app-v1-np
spec:
  parentRefs:
    - name: gw-multiple-listeners
  hostnames:
    - "gw-v1-np.mydomain.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: svc-v1-np
          port: 80
